# Voyagent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  list_models.py  manage.py  pytest.ini  requirements.txt  simple_gen.py
.github/workflows/: gh-pages.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py
backend/app/: main.py
backend/app/agents/: attractions.py  base.py  budget.py  food.py  planner.py  research.py  scheduler.py  validator.py  weather.py
backend/app/api/routes/: analysis.py  edit.py  itineraries.py
backend/app/core/: cache.py  config.py  database.py  gemini.py  logging.py
backend/app/models/: cache.py  itinerary.py  trace.py
backend/app/schemas/: agents.py  itinerary.py
backend/app/services/: currency.py  itinerary_orchestrator.py  places.py  travel_time.py  weather.py
backend/app/utils/: ics.py  json_repair.py
backend/tests/: test_health.py
docs/: index.html
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: ItineraryResult.tsx  TripForm.tsx
tests/: conftest.py  test_api.py  test_cache.py  test_models.py  test_orchestrator.py  test_serializers.py  test_unknown_locations.py  test_utils.py
tests/test_agents/: test_attractions.py  test_budget.py  test_food.py  test_planner.py  test_scheduler.py  test_validator.py  (+1 more)
trip_planner/: __init__.py  admin.py  asgi.py  settings.py  urls.py  wsgi.py
(+49 files in other folders)
